include postgrenosql code from upstream and backport so that it builds

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@ LICENSE file.
     <module>mongodb</module>
     <module>nosqldb</module>
     <module>orientdb</module>
+    <module>postgrenosql</module>
     <module>rados</module>
     <module>redis</module>
     <module>rest</module>
